(hopefully) fix hamburger animation on mobile chrome

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -115,6 +115,8 @@ nav a:hover {
     background-color: white;
     margin: 10px auto;
     border-radius: 10px;
+    -webkit-transition: height .5s;
+    -webkit-transition: transform .3s;
     transition: height .5s;
     transition: transform .3s;
 }
